# js-framework-benchmark

frameworks/keyed/wasm-bindgen/: Cargo.toml  index.html  package.json
frameworks/keyed/wasm-bindgen/src/: lib.rs
