[package]
name = "js-framework-benchmark-wasm-bindgen"
version = "1.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.46"
js-sys = "0.3.23"

[dependencies.web-sys]
version = "0.3.23"
features = [
  'Document',
  'DomTokenList',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'Node',
  'Window',
]

[profile.release]
lto = true
panic = "abort"
